--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -8,7 +8,7 @@
 <body>
 	<p><em>thoughts + theories</em></p>
 
-<img src="images/yesyesohyes copy.jpg" alt="Yes Yes Ohh Yes" title="Yes Yes Ohh Yes">
+<img src="images/yesyesohyes.copy.jpg" alt="Yes Yes Ohh Yes" title="Yes Yes Ohh Yes">
 
 <br/>
 <br/>
