--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -8,7 +8,7 @@
 <body>
 	<p><em>thoughts + theories</em></p>
 
-<img src="images/it-is-in-your-self-interest.jpg" alt="It is in your self-interest to find a way to be very tender" title="It is in your self-interest to find a way to be very tender">
+<img src="images/yesyesohyes.copy.jpg" alt="Yes Yes Ohh Yes" title="Yes Yes Ohh Yes">
 
 <br/>
 <br/>
@@ -39,6 +39,7 @@
 <br/>
 <br/>
 <br/>
+<img src="images/it-is-in-your-self-interest.jpg" alt="It is in your self-interest to find a way to be very tender" title="It is in your self-interest to find a way to be very tender">
 
 
 
